tests/src/frontend/typechecking/invalid/tparam_super9.sk
class Foo<T>(x: T) {
  fun getX(): T {
    this.x
  }
  fun tonly(x: T): T {
    x
  }
  fun foo<U>[T: U](x: U): U {
    this.tonly(x)
  }
}
